# News2Me

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  get_chat_id.py  pyproject.toml  render.yaml  run_bot.py  run_digest.py  run_hourly.py  run_scheduler.py  run_ui.py  test_ui.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deliver.yml  prewarm.yml
config/allowlists/: ai_categories.md  ai_libraries.md  ai_orgs.md  popular_ai_repos.md  substack_publications.md
evals/: eval_classify.py  eval_summarize.py  fixtures.py
newstome/: alerts.py  allowlists.py  auth.py  bot.py  classify.py  cluster.py  config.py  db.py  dedupe.py  delivery.py  email_send.py  fetch.py  observe.py  pipeline.py  qc.py  rank.py  scheduler.py  summarize.py  telegram.py  ui.py
newstome/sources/: __init__.py  arxiv.py  blogs.py  github.py  huggingface.py  pypi.py
scripts/: test_variants.py
templates/: admin.html  archive.html  archive_index.html  digest_view.html  edit.html  landing.html  manage.html  onboard.html
tests/: conftest.py  test_cache.py  test_delivery.py  test_rank.py
